--- a/todos-v4/.eslintrc.json
+++ b/todos-v4/.eslintrc.json
@@ -1,32 +1,52 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 9
-  },
   "env": {
     "browser": true,
-    "commonjs": true,
-    "node": true,
-    "jquery": true
+    "es6": true,
+    "node": true
   },
-  "extends": "airbnb-base",
-  "plugins": [ "import", "html" ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
-    // "off" or 0 - turn the rule off
-    // "warn" or 1 - turn the rule on as a warning (doesn’t affect exit code)
-    // "error" or 2 - turn the rule on as an error (exit code is 1 when triggered)
-    // "no-var": 0,
-    "no-console": 0,
-    "no-plusplus": 0,
-    "vars-on-top": 0,
-    "no-underscore-dangle": 0, // var _foo;
-    "comma-dangle": 0,
-    "func-names": 0, // setTimeout(function () {}, 0);
-    "prefer-arrow-callback": 0, // setTimeout(function () {}, 0);
-    "prefer-template": 0,
-    "no-nested-ternary": 0,
-    "max-classes-per-file": 0,
-    "arrow-parens": ["error", "as-needed"], // a => {}
-    "no-restricted-syntax": [0, "ForOfStatement"],
-    "no-param-reassign": ["error", { "props": false }]
+    "linebreak-style": 0,
+    "import/no-dynamic-require": 0,
+    "import/no-unresolved": 0,
+    "import/prefer-default-export": 0,
+    "global-require": 0,
+    "import/no-extraneous-dependencies": 0,
+    "jsx-quotes": ["error", "prefer-single"],
+    "react/jsx-props-no-spreading": 0,
+    "react/forbid-prop-types": 0,
+    "import/extensions": 0,
+    "no-use-before-define": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-empty-interface": 0,
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "no-shadow": "off",
+    "react/prop-types": 0,
+    "no-empty-pattern": 0,
+    "no-alert": 0,
+    "react-hooks/exhaustive-deps": 0
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx", ".js"]
+    },
+    "import/resolver": {
+      "typescript": "./tsconfig.json"
+    }
   }
 }
