--- a/todos-v4/package.json
+++ b/todos-v4/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.3.2"
   }
 }
